--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,29 @@
             android:orientation="vertical"
             android:gravity="center_horizontal">
 
-            <com.judemanutd.katexview.KatexView
-                android:id="@+id/katex_text"
+            <HorizontalScrollView
+                android:id="@+id/hs_katex_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="12dp"
-                app:textColor="@android:color/black"
-                tools:ignore="MissingClass" />
+                android:fillViewport="true"
+                android:scrollbars="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp">
+
+                    <com.judemanutd.katexview.KatexView
+                        android:id="@+id/katex_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:textColor="@android:color/black"
+                        tools:ignore="MissingClass" />
+                </LinearLayout>
+            </HorizontalScrollView>
 
             <TextView
                 android:id="@+id/test"
@@ -41,13 +56,28 @@
                 android:textAlignment="center"
                 android:textSize="20sp" />
 
-            <com.judemanutd.katexview.KatexView
-                android:id="@+id/katex_answer"
+            <HorizontalScrollView
+                android:id="@+id/hs_katex_answer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                app:textColor="@android:color/black"
-                tools:ignore="MissingClass" />
+                android:fillViewport="true"
+                android:scrollbars="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp">
+
+                    <com.judemanutd.katexview.KatexView
+                        android:id="@+id/katex_answer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:textColor="@android:color/black"
+                        tools:ignore="MissingClass" />
+                </LinearLayout>
+            </HorizontalScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -82,6 +112,7 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
 
     <LinearLayout
         android:layout_width="match_parent"
