--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -761,18 +761,16 @@
                     style="@style/TecladoButton" android:layout_width="0dp" android:layout_height="wrap_content"/>
             </GridLayout>
 
-            <!-- DERIVADAS E INTEGRALES (AV) -->
             <GridLayout
                 android:id="@+id/keyboard_av"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:columnCount="3"
-                android:rowCount="3"
+                android:rowCount="2"
                 android:padding="0dp"
                 android:orientation="horizontal"
                 android:useDefaultMargins="false">
 
-                <!-- Derivadas -->
                 <android.widget.Button
                     android:onClick="ins_char"
                     android:text="d/dx"
@@ -782,25 +780,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
-                <android.widget.Button
-                    android:onClick="ins_char"
-                    android:text="'"
-                    android:background="@drawable/button_border"
-                    android:layout_columnWeight="1"
-                    style="@style/TecladoButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-
-                <android.widget.Button
-                    android:onClick="ins_char"
-                    android:text="''"
-                    android:background="@drawable/button_border"
-                    android:layout_columnWeight="1"
-                    style="@style/TecladoButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-
-                <!-- Integrales -->
                 <android.widget.Button
                     android:onClick="ins_char"
                     android:text="∫   dx"
@@ -821,17 +800,7 @@
 
                 <android.widget.Button
                     android:onClick="ins_char"
-                    android:text="∫   d_"
-                    android:background="@drawable/button_border"
-                    android:layout_columnWeight="1"
-                    style="@style/TecladoButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
-
-                <!-- Diferenciales frecuentes -->
-                <android.widget.Button
-                    android:onClick="ins_char"
-                    android:text="dx"
+                    android:text="f(x)"
                     android:background="@drawable/button_border"
                     android:layout_columnWeight="1"
                     style="@style/TecladoButton"
@@ -840,22 +809,15 @@
 
                 <android.widget.Button
                     android:onClick="ins_char"
-                    android:text="f'(x)"
+                    android:text="f()"
                     android:background="@drawable/button_border"
                     android:layout_columnWeight="1"
                     style="@style/TecladoButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
-                <android.widget.Button
-                    android:onClick="ins_char"
-                    android:text="y'"
-                    android:background="@drawable/button_border"
-                    android:layout_columnWeight="1"
-                    style="@style/TecladoButton"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"/>
             </GridLayout>
+
 
         </ViewFlipper>
     </LinearLayout>
