--- a/app/src/main/res/layout/item_saved_expression.xml
+++ b/app/src/main/res/layout/item_saved_expression.xml
@@ -6,7 +6,10 @@
     android:minHeight="48dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingVertical="8dp">
+    android:paddingVertical="8dp"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <com.judemanutd.katexview.KatexView
         android:id="@+id/kv_expr"
@@ -23,3 +26,4 @@
         android:src="@drawable/baseline_delete_24"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 </LinearLayout>
+
